--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,10 +4,9 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/holo_blue_dark</item>
-        <item name="colorAccent">@android:color/holo_red_light</item>
+        <item name="colorAccent">@android:color/holo_blue_dark</item>
         <item name="android:navigationBarColor">@android:color/holo_red_light</item>
-        <item name="android:statusBarColor">@android:color/holo_red_light</item>
-        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
